<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_ClearAxisFaults" Id="{e427a9bc-bb11-489f-82a5-4efd05b7d3c6}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_ClearAxisFaults EXTENDS ST_MsgToPLC :
STRUCT
    nAxisIndex: DINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>