<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_CloseShutter" Id="{810fd15a-843a-4824-afc1-ec18e84cc650}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_CloseShutter EXTENDS ST_MsgToPLC:
STRUCT

END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>