<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_OpenShutter" Id="{221072d3-d3ba-415b-8512-5f27d949af15}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_OpenShutter EXTENDS ST_MsgToPLC:
STRUCT

END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>