<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_Disable" Id="{567212ce-5c5d-413f-abe9-b28a571d8615}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_Disable EXTENDS ST_PLCMsg:
STRUCT
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>