<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_Ignored" Id="{a0f2af40-b233-48c8-b13d-664e6b7afc7b}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_Ignored EXTENDS ST_PLCMsg:
STRUCT
    reason: DINT;
END_STRUCT
END_TYPE
 
(* Reasons for ignoring an event:
0: Wrong message-set version.
1: Wrong state.
*)]]></Declaration>
  </DUT>
</TcPlcObject>