<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_Timer" Id="{b99aa2fc-6ad4-4198-bd14-2a7bfe1cde8b}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_Timer EXTENDS ST_MsgToCCS:
STRUCT
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>